mensaje de cambios.

--- a/00-Intro-GIT-HTML-CSS/03. HTML/demos/clase1/htmlConEstilo.html
+++ b/00-Intro-GIT-HTML-CSS/03. HTML/demos/clase1/htmlConEstilo.html
@@ -6,7 +6,7 @@
   <style>
       p {
         color: blue;
-        font-size: 20px;
+        font-size: 50px;
       }
       span {
         color: green;
@@ -22,3 +22,6 @@
   <p class='amarillo'>Hola</p>
 </body>
 </html>
+</head>
+</style>
+<p style="color:maroon">Hola</p>
